--- a/templates/post/comment_list.html
+++ b/templates/post/comment_list.html
@@ -1,11 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Comment List</title>
-    <h1> Comment List</h1>
-</head>
+{% extends "base.html" %}
+{% block title %}<title>Comment List</title>{% endblock %}
+{% block content %}
 <body>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-3">
+            <a href="{% url 'post:comment-list' %}">Home</a>
+        </div>
+        <div class="col-sm-9">
+            <h1>Comment List</h1>
+            <h3>Comments:</h3>
+            {% for comment in comment_list %}
+            <tr>
+                <td>{{ comment.user.username }}</td>
+                <td>{{ comment.user.email }}</td>
+                <td>{{ comment.created_at }}</td>
+                <td>{{ comment.comment_text }}</td>
+
+            </tr>
+            {% endfor %}
+        </div>
+    </div>
+</div>
 
 </body>
-</html>
+
+{% endblock content %}
