--- a/templates/post/comment_form.html
+++ b/templates/post/comment_form.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
+{% block title %}<title>Comment Create</title>
+{% endblock %}
 {% load crispy_forms_filters %}
 {% block content %}
+<div class="col-sm-9">
+            <h1>Comment Form</h1>
+</div>
 <form method="post" action="">
     {% csrf_token %}
     {{ form|crispy }}
