--- a/templates/post/comment_form.html
+++ b/templates/post/comment_form.html
@@ -3,7 +3,7 @@
 {% endblock %}
 {% load crispy_forms_filters %}
 {% block content %}
-<div class="col-sm-9">
+<div class="col-sm-9"><a href="{% url 'post:comment-list' %}">Home</a>
             <h1>Comment Form</h1>
 </div>
 <form method="post" action="">
