--- a/templates/post/comment_form.html
+++ b/templates/post/comment_form.html
@@ -6,8 +6,9 @@
 <div class="col-sm-9"><a href="{% url 'post:comment-list' %}">Home</a>
             <h1>Comment Form</h1>
 </div>
-<form method="post" action="">
+<form method="post" action="" enctype="multipart/form-data">
     {% csrf_token %}
+    {{ form.media }}
     {{ form|crispy }}
     <input type="hidden" name="parent_id" id="parent_id">
     <button class="btn btn-primary" type="submit">Submit</button>
