--- a/templates/post/comment_item.html
+++ b/templates/post/comment_item.html
@@ -1,8 +1,20 @@
 <tr>
     <td colspan="4">
         <div style="margin-left: {% if comment.parent %}40px{% endif %};">
+            <form method="post" enctype="multipart/form-data">
             <strong>{{ comment.user.username }}</strong><a href="{% url 'post:comment-create' %}"> - {{ comment.created_at }}
-            <p>{{ comment.comment_text }}</p></a>
+            <p>{{ comment.comment_text }}
+                {% if comment.image %}
+                        <div>
+                            <img src="{{ comment.image.url }}" alt="Comment Image" style="max-width: 320px; max-height: 240px;">
+                        </div>
+                    {% endif %}
+                {% if comment.file %}
+                <div>
+                    <p><strong>File: </strong><a href="{{ comment.file.url }}">{{ comment.file.name }}</a></p>
+                </div>
+                    {% endif %}
+            </p></a>
             {% if comment.replies.all %}
                 <table>
                     {% for reply in comment.replies.all %}
@@ -10,6 +22,7 @@
                     {% endfor %}
                 </table>
             {% endif %}
+            </form>
         </div>
     </td>
 </tr>
