connecting with PostgraSQL

--- a/templates/post/comment_form.html
+++ b/templates/post/comment_form.html
@@ -18,7 +18,7 @@
     {{ form|crispy }}
     <input type="hidden" name="parent_id" id="parent_id">
     <button class="btn btn-secondary w-100" type="submit">Send comment</button>
-</form>
+</form></div>
 
 <script>
 document.querySelectorAll('.reply').forEach(button => {
