--- a/templates/post/comment_item.html
+++ b/templates/post/comment_item.html
@@ -2,33 +2,35 @@
     <td colspan="4">
         <div style="margin-left: {% if comment.parent %}40px{% endif %};">
             <form method="post" enctype="multipart/form-data">
-
             <strong>{{ comment.user.username }}</strong><p>{{ comment.created_at }}</p>
-                <a href="{% url 'post:comment-create' %}">
-
-            <p>{{ comment.comment_text }}
-
+                    <p>{{ comment.comment_text }}
                 {% if comment.image %}
                         <div>
                             <img src="{{ comment.image.url }}" alt="Comment Image" style="max-width: 320px; max-height: 240px;">
                         </div>
                     {% endif %}
                 {% if comment.file %}
-                <div>
-                    <p><strong>File: </strong><a href="{{ comment.file.url }}">{{ comment.file.name }}</a></p>
-                </div>
-                    {% endif %}
-            </p></a>
-
-
+                    <div>
+                        <p><strong>File: </strong><a href="{{ comment.file.url }}">{{ comment.file.name }}</a></p>
+                    </div>
+                {% endif %}
+                    <div class="comment">
+                        <p>{{ comment.text }}</p>
+                    </div>
+            </form>
+<form role="form" id="contact-form" method="post" action="" enctype="multipart/form-data">
+    <div class="card-body">
+    <p class="reply-btn" data-comment-id="{{ comment.id }}"></p><a href="{% url 'post:comment-create' %}">Reply</a>
             {% if comment.replies.all %}
             <table>
                     {% for reply in comment.replies.all %}
                         {% include 'post/comment_item.html' with comment=reply %}
                     {% endfor %}
-                </table>
+
+            </table>
         {% endif %}
-            </form>
+    </div>
+</form>
         </div>
     </td>
 </tr>
