--- a/templates/post/comment_list.html
+++ b/templates/post/comment_list.html
@@ -7,7 +7,9 @@
 
             {% if comment_list %}<table class="table offset-lg-0.5">
             <tr>
-                <th>Comments</th>
+                <th>Comments:</th>
+                <th><a href="{% url 'post:comment-create' %}">Add comments</a></th>
+
               </tr>
             <thead>
             <tr>
