--- a/templates/post/comment_list.html
+++ b/templates/post/comment_list.html
@@ -5,7 +5,7 @@
         <div class="col-sm-9">
             <h1 class="text-center">Comment List</h1>
 
-            {% if comment_list %}<table class="table offset-lg-0.5">
+            <table class="table offset-lg-0.5">
             <tr>
                 <th>Comments:</th>
                 <th><a href="{% url 'post:comment-create' %}">Add comments</a></th>
@@ -24,7 +24,6 @@
                     {% endfor %}
                 </tbody>
             </table>
-            {% endif %}
 
         </div>
     <div>
