--- a/templates/post/comment_form.html
+++ b/templates/post/comment_form.html
@@ -25,7 +25,7 @@
   </div>
 </section>
 
-{% load static %}
-<script src="{% static 'js/button-reply.js' %}" crossorigin="anonymous"></script>
+<!--{% load static %}-->
+<!--<script src="{% static 'js/button-reply.js' %}" crossorigin="anonymous"></script>-->
 
-{% endblock %}
+<!--{% endblock %}-->
