--- a/templates/post/comment_item.html
+++ b/templates/post/comment_item.html
@@ -1,13 +1,16 @@
 <tr>
     <td colspan="4">
         <div style="margin-left: {% if comment.parent %}40px{% endif %};">
+            <form method="post" enctype="multipart/form-data">
             <strong>{{ comment.user.username }}</strong>
             <p>{{ comment.created_at }}</p>
             <p>{{ comment.comment_text }}</p>
             {% if comment.image %}
                 <div>
+
                     <img src="{{ comment.image.url }}" alt="Comment Image" style="max-width: 320px; max-height: 240px;">
                 </div>
+                <a href="{{ comment.image.url }}">Show image</a>
             {% endif %}
             {% if comment.file %}
                 <div>
@@ -25,7 +28,7 @@
                         {% endfor %}
                     </table>
                 {% endif %}
+            </form>
             </div>
         </td>
     </tr>
-
